--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+   <nav>
+     <% if logged_in? %>
+       <%= link_to "Logout", logout_path, method: :delete %>
+     <% else %>
+       <%= link_to "Login", login_path %>
+     <% end %>
+   </nav>
     <%= yield %>
   </body>
 </html>
