--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,15 +6,15 @@
   <%= f.text_field :title %>
   <br><br><br>
   <label>Date:</label>
-  <%= f.text_field :date %>
+  <%= f.date_field :date %>
   <br><br><br>
   <label>Time:</label>
-  <%= f.number_field :time %>
+  <%= f.time_field :time %>
   <br><br><br>
   <label>Location</label>
   <%= f.text_field :location %>
   <br><br><br>
-  <label>Duration:</label>
+  <label>Duration: (time in mins)</label>
   <%= f.number_field :duration %>
   <br><br><br>
   <%= f.submit %>
