--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,5 @@
 <h1><%= @user.name %></h1>
+
+<%= link_to "Create an Activity", new_event_path %>
+<br>
+<%= link_to "Join an Activity", events_path %>
