--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,14 @@
 
   <body>
    <nav>
+     <div class="ui breadcrumb">
      <% if logged_in? %>
        <%= link_to "Logout", logout_path, method: :delete %>
      <% else %>
-       <%= link_to "Login", login_path %>
+       <%= link_to "Login", login_path%>
      <% end %>
-     <br>
      <%= link_to "Events", events_path %>
+   </div>
    </nav>
     <%= yield %>
   </body>
