--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
+<div class="field_image">
+<div class="ui raised very padded text container segment" id="splash-box">
 <center><h1>All Events</h1>
 <% @events.each do |e| %>
 <label>Event Name:</label>
@@ -8,4 +10,6 @@
   <button class="ui blue basic button">
     <%= link_to "New Event", new_event_path %>
   </button>
+</div>
+</div>
 </center>
