threw in a nav bar

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,12 +9,9 @@
 <br><br><br>
 
 <label>Date:</label>
-<%= @event.date %>
+<%= @event.date_and_time %>
 <br><br><br>
 
-<label>Time:</label>
-<%= @event.time %>
-<br><br><br>
 
 <label>Location:</label>
 <%= @event.location %>
