--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
   <body>
     <h1>hey laura was here</h1>
+    <p>will u approve me helping you?</p>
    <nav>
      <div class="inverted menu">
        <a class="teal item">
