--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Event Form</h1>
-
+<div class="field_image">
+<div class="ui raised very padded text container segment" id="splash-box">
+  <h1>New Event Form</h1>
 <%= render 'form' %>
+</div>
+</div>
