--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,10 @@
-<h1><%= @user.name %></h1>
-<%= link_to "Create an Activity", new_event_path %>
-<br>
-<%= link_to "Join an Activity", events_path %>
+<div class="field_image">
+  <div class="ui raised very padded text container segment" id="splash-box">
+    <h1><%= @user.name %></h1>
+    <%= link_to "Create an Activity", new_event_path %>
+    <br>
+    <%= link_to "Join an Activity", events_path %>
+
+    <h3>Activites You're Signed Up For</h3>
+  </div>
+</div>
