--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,27 +1,35 @@
-<center><h1>Show Event Form</h1>
+<div class="field_image">
+  <div class="ui raised very padded text container segment" id="splash-box">
+    <center><h1>Show Event Form</h1>
 
-<label>Sport:</label>
-<%= link_to @event.sport.name, sport_path(@event.sport.id) %>
-<br><br><br>
+      <label>Sport:</label>
+        <%= link_to @event.sport.name, sport_path(@event.sport.id) %>
+      <br><br>
 
-<label>Title:</label>
-<%= @event.title %>
-<br><br><br>
+      <label>Title:</label>
+        <%= @event.title %>
+      <br><br>
 
-<label>Date:</label>
-<%= @event.date_and_time %>
-<br><br><br>
+      <label>Date:</label>
+        <%= @event.date %>
+      <br><br>
+
+      <label>Time:</label>
+        <%= @event.time %>
+      <br><br>
 
 
-<label>Location:</label>
-<%= @event.location %>
-<br><br><br>
+      <label>Location:</label>
+        <%= @event.location %>
+      <br><br>
 
-<label>Duration:</label>
-<%= @event.duration %>
-<br><br><br>
-<br><br><br>
-<button class="ui blue basic button">
-<%= link_to "Back to all Events", events_path %>
-</button>
-</center>
+      <label>Duration:</label>
+        <%= @event.duration %>
+      <br><br>
+
+      <button class="ui blue basic button">
+        <%= link_to "Back to all Events", events_path %>
+      </button>
+  </div>
+  </div>
+  </center>
