--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,9 +1,13 @@
-<center><h1>List of Sports</h1>
+<div class="field_image">
+  <div class="ui raised very padded text container segment" id="splash-box">
+    <center><h1>List of Sports</h1>
 
-<% @sports.each do |s| %>
+    <% @sports.each do |s| %>
 
-<label>Name:</label> <%= link_to s.name, sport_path(s) %><br><br><br>
-<% end %>
+    <label>Name:</label> <%= link_to s.name, sport_path(s) %><br><br><br>
+    <% end %>
 
-<%= link_to "New Sport Form", new_sport_path %>
-</center>
+    <%= link_to "New Sport Form", new_sport_path %>
+    </center>
+  </div>
+</div>
