--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,12 +1,14 @@
-<center><h1>Sports Show Page</h1>
+<div class="field_image">
+  <div class="ui raised very padded text container segment" id="splash-box">
+    <center><h1>Sports Show Page</h1>
 
-<label>Name:</label>
-<%= @sport.name %>
-<br><br><br>
-<label>Roster Count:</label>
-<%= @sport.player_count %>
-<br><br><br>
-<%= link_to "Edit", edit_sport_path(@sport) %>
-<br><br><br>
-<%= link_to "Back", sports_path %>
-</center>
+    <label>Name:</label>
+    <%= @sport.name %>
+    
+    <br><br><br>
+    <%= link_to "Edit", edit_sport_path(@sport) %>
+    <br><br><br>
+    <%= link_to "Back", sports_path %>
+    </center>
+  </div>
+</div>
