removed groups, added user events join, fixed seeds

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -8,7 +8,10 @@
     <%= f.text_field :title %>
     <br>
     <label>Date:</label>
-    <%= f.datetime_select :date_and_time, :ampm => true, :minute_step => 15 %>
+    <%= f.text_field :date %>
+    <br>
+    <label>Time:</label>
+    <%= f.text_field :time %>
     <br>
     <label>Location</label>
     <%= f.text_field :location %>
