--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,11 @@
 <br><br><br>
 
 <label>Date:</label>
-<%= @event.date_and_time %>
+<%= @event.date %>
+<br><br><br>
+
+<label>Time:</label>
+<%= @event.time %>
 <br><br><br>
 
 
