--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,3 +1,7 @@
 <h1>Edit Your Account</h1>
 
-<%= render 'form' %>
+<div class="field_image">
+  <div class="ui raised very padded text container segment scrolling content" id="splash-box">
+    <%= render 'form' %>
+  </div>
+</div>
