--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,18 +1,23 @@
 <div class="field_image">
-<div class="ui raised very padded text container segment scrolling content" id="splash-box">
-  <% @events.each do |e| %>
-  <table class="ui celled table">
-    <thead>
-      <tr><th>Event Name</th>
-        <th>Sport</th>
-        <th>Location</th>
-      </tr></thead>
-      <tbody>
-        <tr>
-          <td data-label="Event Name"><%= link_to e.title, event_path(e) %></td>
-          <td data-label="Sport"> <%= e.sport.name %>   </td>
-          <td data-label="Location"><%= e.location%></td>
-        </tr>
-  </tbody>
-  </table>
-  <% end %>
+  <div class="ui raised very padded text container segment scrolling content" id="splash-box">
+    <h1>All Activities</h1>
+    <table class="ui fixed table">
+      <thead>
+        <tr><th>Event Name</th>
+          <th>Sport</th>
+          <th>Location</th>
+        </tr></thead>
+        <% @events.each do |e| %>
+        <table class="ui fixed table">
+
+          <tbody>
+            <tr>
+              <td data-label="Event Name"><%= link_to e.title, event_path(e) %></td>
+              <td data-label="Sport"> <%= e.sport.name %>   </td>
+              <td data-label="Location"><%= e.location%></td>
+            </tr>
+          </tbody>
+        </table>
+        <% end %>
+  </div>
+</div>
