--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,34 +1,48 @@
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
-    <center><h1>Show Event Form</h1>
+    <h1>Activity</h1>
 
-      <label>Sport:</label>
-        <%= link_to @event.sport.name, sport_path(@event.sport.id) %>
-      <br><br>
+    <label>Sport:</label>
+      <%= link_to @event.sport.name, sport_path(@event.sport.id) %>
+    <br><br>
 
-      <label>Title:</label>
-        <%= @event.title %>
-      <br><br>
+    <label>Title:</label>
+      <%= @event.title %>
+    <br><br>
 
-      <label>Date:</label>
-      <%= @event.date.strftime("%m/%d/%Y") %>
-      <br><br>
+    <label>Date:</label>
+    <%= @event.date.strftime("%m/%d/%Y") %>
+    <br><br>
 
-      <label>Time:</label>
-        <%= @event.time.strftime("%I:%M") %>
-      <br><br>
+    <label>Time:</label>
+      <%= @event.time.strftime("%I:%M%p") %>
+    <br><br>
 
-      <label>Location:</label>
-        <%= @event.location %>
-      <br><br>
+    <label>Location:</label>
+      <%= @event.location %>
+    <br><br>
 
-      <label>Duration:</label>
-        <%= @event.duration %>
-      <br><br>
+    <label>Duration:</label>
+      <%= @event.duration %>
+    <br><br>
 
-      <button class="ui blue basic button">
-        <%= link_to "Back to all Events", events_path %>
-      </button>
+    <label>Attendees:</label>
+      <% if @event.users.length == 0 %>
+        <p>No Attendees</p>
+      <% else %>
+        <% @event.users.each do |user| %>
+          <p><%= user.name %></p>
+        <% end %>
+      <% end %>
+    <br><br>
+
+    <button class="ui green basic button">
+      <%= link_to "Join This Event", join_event_path(@event) %>
+    </button>
+    <br><br>
+
+    <button class="ui blue basic button">
+      <%= link_to "Back to all Events", events_path %>
+    </button>
   </div>
-  </div>
-  </center>
+</div>
