you can see the events in the sports show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,12 +10,9 @@
         <%= @event.title %>
       <br><br>
 
-      <label>Date:</label>
-        <%= @event.date %>
-      <br><br>
 
       <label>Time:</label>
-        <%= @event.time %>
+        <%= @event.date_and_time %>
       <br><br>
 
 
