--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,10 +1,12 @@
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
-    <center><h1>Sports Show Page</h1>
-
-    <label>Name:</label>
-    <%= @sport.name %>
-    
+<center>
+    <h1><%= @sport.name %></h1>
+    <br>
+    <h2>Events:</h2><br><br>
+    <% @sport.events.each do |event| %>
+    <%= link_to event.title, event_path(event) %>
+    <% end %>
     <br><br><br>
     <%= link_to "Edit", edit_sport_path(@sport) %>
     <br><br><br>
