--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,7 +1,11 @@
 <div class="field_image">
+
   <div class="ui raised very padded text container segment scrolling content" id="splash-box">
+    <h2 class="ui center aligned icon header">
+    <i class="circular users icon"></i>
+    Players
+  </h2>
     <div class="ui middle aligned animated list">
-      <h1>Players</h1>
       <% @users.each do |u| %>
         <div class ="item">
           <div class="content">
