--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,8 @@
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Create a New Account</h1>
+    <div class="ui form">
     <%= render 'form' %>
   </div>
+</div>
 </div>
