--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,16 +1,14 @@
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
-<center>
     <h1><%= @sport.name %></h1>
     <br>
-    <h2>Events:</h2><br><br>
+    <h2>Events:</h2>
     <% @sport.events.each do |event| %>
     <%= link_to event.title, event_path(event) %>
     <% end %>
-    <br><br><br>
+    <br><br>
     <%= link_to "Edit", edit_sport_path(@sport) %>
-    <br><br><br>
+    <br>
     <%= link_to "Back", sports_path %>
-    </center>
   </div>
 </div>
