--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,8 @@
  /* class selector */
 /* has a "." before the name of the class */
 .field_image {
-  background-image: url("https://images.unsplash.com/photo-1491324213149-48ea4e31bf50?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6031934972d8699bee4460946f3c5329&auto=format&fit=crop&w=830&q=80");
+  /* background-image: url("https://images.unsplash.com/photo-1491324213149-48ea4e31bf50?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6031934972d8699bee4460946f3c5329&auto=format&fit=crop&w=830&q=80"); */
+  background-image: url("https://images.unsplash.com/photo-1525973132219-a04334a76080?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=569fbbdac237a80e282b32eaf9e24748&auto=format&fit=crop&w=1354&q=80");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
