threw in random things

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<div class="field_image">
+<div class="field_image" style="height: 150%;">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Create a New Account</h1>
     <div class="ui form">
