--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,7 @@
   top: 100px;
   text-align: center;
   opacity: 0.9;
+  border: 5px solid black;
 }
  /* class selector */
 /* has a "." before the name of the class */
