--- a/app/views/sports/new.html.erb
+++ b/app/views/sports/new.html.erb
@@ -1,3 +1,23 @@
-<h1>NEW SPORTS FORM</h1>
-
-<%= render 'form' %>
+<nav>
+  <div class="ui secondary pointing menu">
+      <%= link_to @user.name, user_path(@user), class:"item" %>
+      <%= link_to "Events", events_path, class:"item" %>
+      <%= link_to "Sports", sports_path, class:"item active" %>
+    <div class="right menu">
+      <!-- <a class="ui item"> -->
+      <%= link_to "Logout", logout_path, method: :delete, class:"ui item" %>
+      <!-- </a> -->
+    </div>
+  </div>
+</nav>
+<div class="field_image">
+  <div class="ui raised very padded text container segment" id="splash-box">
+    <h1>Add a New Sport!</h1>
+    <% if flash[:errors] %>
+      <% flash[:errors].each do |e| %>
+        <%= p e %>
+      <% end %>
+    <% end %>
+    <%= render 'form' %>
+  </div>
+</div>
