--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,11 +1,11 @@
 /* id selector */
 /* has a "#" before the name of the id */
 #splash-box {
-  top: 100px;
+  top: 5vh;
   text-align: center;
   opacity: 0.9;
   overflow: auto;
-  height:75vh;
+  height:85vh;
   border: 5px solid black;
 }
  /* class selector */
