--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,18 @@
+<nav>
+  <div class="ui secondary pointing menu">
+      <%= link_to @user.name, user_path(@user), class:"item" %>
+      <%= link_to "Events", events_path, class:"item active" %>
+      <%= link_to "Sports", sports_path, class:"item" %>
+    <div class="right menu">
+      <!-- <a class="ui item"> -->
+      <%= link_to "Logout", logout_path, method: :delete, class:"ui item" %>
+      <!-- </a> -->
+    </div>
+  </div>
+</nav>
 <div class="field_image">
   <div class="ui raised very padded text container segment scrolling content" id="splash-box">
-    <h1>All Activities</h1>
+    <h1>All Events</h1>
     <table class="ui fixed table">
       <thead>
         <tr><th>Event Name</th>
