--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,21 @@
+<nav>
+  <div class="ui secondary pointing menu">
+      <%= link_to @user.name, user_path(@user), class:"item" %>
+      <%= link_to "Events", events_path, class:"item active" %>
+      <%= link_to "Sports", sports_path, class:"item" %>
+    <div class="right menu">
+      <%= link_to "Logout", logout_path, method: :delete, class:"ui item" %>
+    </div>
+  </div>
+</nav>
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Activity</h1>
+
+    <button class="ui green basic button">
+      <%= link_to "Join This Event", join_event_path(@event) %>
+    </button>
+    <br><br>
 
     <label>Sport:</label>
       <%= link_to @event.sport.name, sport_path(@event.sport.id) %>
@@ -36,8 +51,8 @@
       <% end %>
     <br><br>
 
-    <button class="ui green basic button">
-      <%= link_to "Join This Event", join_event_path(@event) %>
+    <button class="ui blue basic button">
+      <%= link_to "Edit This Event", edit_event_path(@event) %>
     </button>
     <br><br>
 
