--- a/app/views/sports/_form.html.erb
+++ b/app/views/sports/_form.html.erb
@@ -1,11 +1,12 @@
-<div class="field_image">
-  <div class="ui raised very padded text container segment" id="splash-box">
-    <%= form_for @sport do |f| %>
-    <label>Name:</label>
-      <%= f.text_field :name %>
-      <br><br><br>
 
-      <%= f.submit %>
-    <% end %>
-  </div>
+<div class="ui form">
+<%= form_for @sport, class: "ui form" do |f| %>
+  <label>Name:</label>
+  <div class="ui left icon input"></div><i class="lightning bolt icon"></i>
+    <%= f.text_field :name %>
+  <br><br>
+  <button class="ui blue basic button">
+  Submit
+  </button>
+<% end %>
 </div>
