--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,13 +1,22 @@
+<nav>
+  <div class="ui secondary pointing menu">
+      <%= link_to @user.name, user_path(@user), class:"item" %>
+      <%= link_to "Events", events_path, class:"item" %>
+      <%= link_to "Sports", sports_path, class:"item active" %>
+    <div class="right menu">
+      <!-- <a class="ui item"> -->
+      <%= link_to "Logout", logout_path, method: :delete, class:"ui item" %>
+      <!-- </a> -->
+    </div>
+  </div>
+</nav>
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
-    <center><h1>List of Sports</h1>
+    <h1>Sports</h1>
 
     <% @sports.each do |s| %>
 
-    <label>Name:</label> <%= link_to s.name, sport_path(s) %><br><br><br>
+    <%= link_to s.name, sport_path(s) %><br><br>
     <% end %>
-
-    <%= link_to "New Sport Form", new_sport_path %>
-    </center>
   </div>
 </div>
