--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,14 +1,26 @@
+<nav>
+  <div class="ui secondary pointing menu">
+      <%= link_to @user.name, user_path(@user), class:"item" %>
+      <%= link_to "Events", events_path, class:"item" %>
+      <%= link_to "Sports", sports_path, class:"item active" %>
+    <div class="right menu">
+      <!-- <a class="ui item"> -->
+      <%= link_to "Logout", logout_path, method: :delete, class:"ui item" %>
+      <!-- </a> -->
+    </div>
+  </div>
+</nav>
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1><%= @sport.name %></h1>
-    <br>
     <h2>Events:</h2>
     <% @sport.events.each do |event| %>
-    <%= link_to event.title, event_path(event) %>
+    <%= link_to event.title, event_path(event) %><br>
     <% end %>
     <br><br>
-    <%= link_to "Edit", edit_sport_path(@sport) %>
-    <br>
+
+    <button class="ui blue basic button">
     <%= link_to "Back", sports_path %>
+    </button>
   </div>
 </div>
