minor styling on splash box and fixing some broken paths

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -28,7 +28,8 @@
       <div class="ui left icon input"></div><i class="users icon"></i>
     <%= f.number_field :player_count %>
     <br><br>
-    <button class="ui blue basic button">Submit
+    <button class="ui blue basic button">
+      Submit
     </button>
     <% end %>
 </div>
