--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -5,7 +5,7 @@
     <%= f.text_field :name %>
     <br><br>
     <%= f.label "Email:" %>
-    <div class="ui left icon input"></div><i class="envelope outline icon"></i>
+    <div class="ui left icon input"></div><i class="envelope icon"></i>
     <%= f.text_field :email %>
     <br><br>
     <%= f.label "Password:" %>
@@ -13,7 +13,7 @@
     <%= f.password_field :password %>
     <br><br>
     <%= f.label "Age:" %>
-    <div class="ui left icon input"></div><i class="id card outline icon"></i>
+    <div class="ui left icon input"></div><i class="id card icon"></i>
     <%= f.number_field :age %>
     <br><br>
     <%= f.label "Gender:" %>
