--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -14,11 +14,11 @@
     <h1><%= @user.name %></h1>
     <br>
     <button class="ui green basic button">
-      <%= link_to "Create an Activity", new_event_path %>
+      <%= link_to "Create an Event", new_event_path %>
     </button>
     <!-- <br><br> -->
     <button class="ui blue basic button">
-      <%= link_to "Join an Activity", events_path %>
+      <%= link_to "Join an Event", events_path %>
     </button>
     <br><br>
     <h3>Activites You're Signed Up For</h3>
