--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -6,7 +6,7 @@
       </button>
       <div class='ui horizontal divider'>Or</div>
       <button class="fluid ui button">
-        <%= link_to "Create An Account", signup_path %>
+        <%= link_to "Create an Account", signup_path %>
       </button>
       </div>
     </div>
