--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,7 +6,7 @@
   opacity: 0.9;
   overflow: auto;
   height:85vh;
-  border: 5px solid black;
+  border: 3px solid lightblue;
 }
  /* class selector */
 /* has a "." before the name of the class */
