--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -13,10 +13,12 @@
 <div class="field_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Sports</h1>
-
+    <button class="ui blue basic button">
+      <%= link_to "Create a New Sport", new_sport_path %>
+    </button>
+    <br><br>
     <% @sports.each do |s| %>
-
-    <%= link_to s.name, sport_path(s) %><br><br>
+      <%= link_to s.name, sport_path(s) %><br><br>
     <% end %>
   </div>
 </div>
