--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 </nav>
-<div class="field_image">
+<div class="track_image">
   <div class="ui raised very padded text container segment scrolling content" id="splash-box">
     <h1>All Events</h1>
     <table class="ui fixed table">
