--- a/app/views/sports/new.html.erb
+++ b/app/views/sports/new.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 </nav>
-<div class="field_image">
+<div class="basketwater_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Add a New Sport!</h1>
     <% if flash[:errors] %>
