--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 </nav>
-<div class="field_image">
+<div class="track_image">
 <div class="ui raised very padded text container segment" id="splash-box">
   <h1>New Activity</h1>
   <% if flash[:errors] %>
