--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
 </nav>
-<div class="field_image">
+<div class="track_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Activity</h1>
 
