--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 </nav>
-<div class="field_image">
+<div class="basketwater_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1>Sports</h1>
     <button class="ui blue basic button">
