--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 </nav>
-<div class="field_image">
+<div class="basketwater_image">
   <div class="ui raised very padded text container segment" id="splash-box">
     <h1><%= @sport.name %></h1>
     <h2>Events:</h2>
