some more styling updates

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,11 +10,11 @@
     <br><br>
     <label>Date:</label>
       <div class="ui left icon input"></div><i class="calendar alternate icon"></i>
-    <%= f.text_field :date %>
+    <%= f.date_field :date, class: 'form-control' %>
     <br><br>
     <label>Time:</label>
       <div class="ui left icon input"></div><i class="clock icon"></i>
-    <%= f.text_field :time %>
+    <%= f.time_field :time %>
     <br><br>
     <label>Location:</label>
       <div class="ui left icon input"></div><i class="map icon"></i>
