--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -12,6 +12,11 @@
 <div class="field_image">
   <div class="ui raised very padded text container segment scrolling content" id="splash-box">
     <h1>Update Your Account Settings</h1>
+    <% if flash[:errors] %>
+      <% flash[:errors].each do |e| %>
+        <%= p e %><br>
+      <% end %>
+    <% end %>
     <%= render 'form' %>
   </div>
 </div>
